Fixed font and overflow problem

--- a/css/post-preview-side.css
+++ b/css/post-preview-side.css
@@ -35,6 +35,7 @@
 
 .post-preview-side-body {
   padding: 0px 20px 12px 20px;
+  overflow-wrap: break-word;
 }
 
 .post-preview-side-text {
