--- a/css/post-preview-small.css
+++ b/css/post-preview-small.css
@@ -36,6 +36,7 @@
 .post-preview-small-body {
   width: 90%;
   padding: 0px 20px 5px 20px;
+  overflow-wrap: break-word;
 }
 
 .post-preview-small-text {
