--- a/css/post-preview.css
+++ b/css/post-preview.css
@@ -42,6 +42,7 @@
 .post-preview-body {
   width: 90%;
   padding: 14px 20px 12px 20px;
+  overflow-wrap: break-word;
 }
 
 .post-preview-text {
