--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -27,9 +27,6 @@ a:hover, a:active, a:visited {
 
 .content {
     margin-bottom: 36px;
-}
-
-.content > p {
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
     line-height: 1.5;
